web/styles/settings.css
/* ... */
.time-limit-custom-input,
.realm_jitsi_server_url_custom_input {
    padding: var(--input-vertical-padding) var(--input-horizontal-padding);
    color: var(--color-text-default);
    border: var(--input-border-width) solid hsl(0deg 0% 80%);
    transition:
        border-color linear 0.2s,
        box-shadow linear 0.2s;
    font-family: inherit;

    &:focus {
        border-color: hsl(206deg 80% 62% / 80%);
        outline: 0;
        box-shadow:
            inset 0 1px 1px hsl(0deg 0% 0% / 7.5%),
            0 0 8px hsl(206deg 80% 62% / 60%);
    }
}

#realm_jitsi_server_url_setting {
    display: flex;
    flex-wrap: wrap;
    gap: 15px;

    .jitsi_server_url_custom_input_label {
        margin-bottom: var(--margin-bottom-field-description);
    }
}

#profile-settings,
#edit-user-form {
    .custom_user_field {
        padding-bottom: 20px;

        .settings-textarea,
        .modal-textarea {
            height: 80px;
            /* We set the minimum height of textarea to be enough for two lines of text. */
            min-height: calc(2em * var(--base-line-height-unitless));
            resize: vertical;
        }

        &:hover .remove_date {
            display: inline-flex;
        }

        .remove_date {
            opacity: 0.5;
            display: none;
            cursor: pointer;
            grid-area: close-button;
            z-index: 5;

            &:hover {
                opacity: 1;
            }
        }

        .datepicker {
            cursor: default;
            padding-right: 1.4285em; /* 20px at 14px em */
            /* full input width minus right padding and
               6px left padding from .settings_text_input
               and 1px border on each side */
            max-width: calc(var(--modal-input-width) - 1.4285em - 8px);
        }

        & input[disabled].datepicker {
            cursor: not-allowed;
        }
    }

    #show_my_user_profile_modal {
        width: 100%;
        top: 20px;
        position: sticky;

        .show-user-profile-icon {
            padding-left: 2px;
            vertical-align: middle;
        }
    }
}

#edit-user-form {
    .person_picker {
        /* Subtract (1px border and 2px of padding) on each side */
        width: calc(var(--modal-input-width) - 6px);
        max-width: calc(100% - 6px);
    }

    .modal-textarea {
        /* Subtract (2 * horizontal padding) + (2 * border width) */
        box-sizing: content-box;
        width: calc(
            var(--modal-input-width) - 2 * var(--input-horizontal-padding) - 2 *
                var(--input-border-width)
        );
        max-width: calc(
            100% - 2 * var(--input-horizontal-padding) - 2 *
                var(--input-border-width)
        );
    }
}

#manage-profile-tab {
    #edit-user-form,
    #bot-edit-form {
        .name-setting {
            margin-bottom: 10px;
        }
    }

    #edit-user-form-error:has(.banner),
    #bot-edit-form-error:has(.banner) {
        margin-bottom: 10px;
    }

    & input,
    input[type="url"],
    .modal-textarea,
    & select {
        /* Override undesired Bootstrap default. */
        margin-bottom: 0;
    }
}

#muted_topics_table {
    width: 90%;
    margin: 0 auto;

    & tbody {
        border-bottom: none;
    }
}

#payload_url_inputbox {
    & input[type="text"] {
        width: 340px;
    }
}

.settings-field-label {
    margin-bottom: var(--margin-bottom-field-description);
    /* Avoid having the clickable area extend to the full width of the containing element */
    width: fit-content;
}

#realm-user-default-settings {
    .settings-field-label,
    .settings-checkbox-wrapper,
    .info-density-controls {
        .reset-user-setting-to-default {
            display: inline-flex;
            padding: 0.1875em; /* 3px at 16px */
            margin-left: 0.1875em; /* 3px at 16px */

            position: relative;
            top: -0.0625em; /* 1px at 16px */

            .zulip-icon {
                width: 1em; /* 15px at 16px */
                height: 1em; /* 15px at 16px */
                font-size: 0.9375em; /* 15px at 16px */
            }
        }
    }

    .general_notifications .reset-user-setting-to-default {
        font-size: 1.2em;
        margin-top: 0.3125em; /* 6px at 16px */
        /* This is needed to adjust the gap property used
        for flex layout so that button is not too far from
        the heading. */
        margin-left: -0.5em; /* 9.6px at 16px */
    }
}

.settings-profile-user-field-hint {
    color: var(--color-text-settings-field-hint);
    /* We effectively eliminate the margin-bottom on
       .settings-field-label by pulling .field-hint
       up a corresponding negative value. This cinches
       things up a little tighter, given the generous
       line-height (20px) on <label> elements, though
       note well that that comes care of Bootstrap. */
    margin-top: calc(var(--margin-bottom-field-description) * -1.5);
    /* Maintain the same margin-bottom value as appears
       with .settings-field-label to display text-input
       combinations uniformly throughout the settings UI. */
    margin-bottom: var(--margin-bottom-field-description);
}

.cursor-text {
    cursor: text;
}

.profile-field-choices {
    display: inline-block;

    & hr {
        margin-top: 0;
        margin-bottom: 5px;
    }

    .choice-row {
        margin-top: 8px;

        & input {
            width: 190px;
        }

        & button {
            margin-left: 2px;
        }
    }

    > .choice-row:first-of-type {
        margin-top: 0;
    }
}

.profile-field-choices-wrapper > .alphabetize-choices-button {
    display: block;
    margin: 12px 0 0;
}
/* ... */

